garde/tests/ui/compile-fail/unknown_rule.rs
#![allow(dead_code)]

#[derive(garde::Validate)]
struct Test<'a> {
    #[garde(ascii, unknown_rule)]
    field: &'a str,
}

fn main() {}
