garde/tests/ui/compile-fail/unknown_rule.stderr
error: unrecognized validation rule
 --> tests/ui/compile-fail/unknown_rule.rs
  |
  |     #[garde(ascii, unknown_rule)]
  |                    ^^^^^^^^^^^^
